DigicielFull/force-app/main/default/objects/LiveChatTranscript/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unable to send top up</fullName>
            </value>
            <value>
                <fullName>Unable to login</fullName>
            </value>
            <value>
                <fullName>Unable to register</fullName>
            </value>
            <value>
                <fullName>Did not receive activation email</fullName>
            </value>
            <value>
                <fullName>Payment issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Credit applied to incorrect number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>