DigicielFull/force-app/main/default/objects/LiveChatTranscript/fields/Chat_Transcript_Key__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chat Transcript Key</label>
    <type>Text</type>
</CustomField>