DigicielFull/force-app/main/default/objects/LiveChatTranscript/fields/Disposition_Code__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Code__c</fullName>
    <label>Disposition Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Research Information Only</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Abusive Chatter</fullName>
            </value>
            <value>
                <fullName>Ghost Chat</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Test Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>