DigicielFull/force-app/main/default/objects/LiveChatTranscript/fields/Disposition_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Sub_Category__c</fullName>
    <label>Disposition Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Disposition_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>Inquiry Submitted</fullName>
            </value>
            <value>
                <fullName>Offline to Phone</fullName>
            </value>
            <value>
                <fullName>Chat Disconnected</fullName>
            </value>
            <value>
                <fullName>Not Ready to Give Information</fullName>
            </value>
            <value>
                <fullName>Program Incompatible</fullName>
            </value>
            <value>
                <fullName>Working with Advisor/Submitted App.</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Current Student</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Misdirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>