DigicielFull/force-app/main/default/objects/LiveChatTranscript/fields/Legacy_Transcript_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Transcript_ID__c</fullName>
    <label>Legacy Transcript ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>