DigicielFull/force-app/main/default/objects/LiveChatTranscript/fields/Top_Up_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Account_Email__c</fullName>
    <label>Top-Up Account Email</label>
    <type>Email</type>
</CustomField>