DigicielFull/force-app/main/default/objects/LiveChatTranscript/fields/Top_Up_Account_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Account_Phone_Number__c</fullName>
    <label>Top-Up Account Phone Number</label>
    <type>Phone</type>
</CustomField>